@@ -5,6 +5,13 @@ Implemented Enhancements
 * Changed energy cost to $/W-hr from $/kW-hr
 * Changed energy storage cost to $/W-hr from $/GW-hr
 
+* Changed default value for Energy Storage Cost to 0.1 $/W-hr
+* Changed default value for Total Optical Power to 100 GW
+* Changed default value for array size to 1000 m
+* Changed default value for Sail Thickness to 1 micron
+* Changed default value for Payload to 0.001 kg
+* Renamed "Laser Power" output to "Laser Power in Main Beam"
+
 2016-05-10
 
 Implemented Enhancements
